--- a/org.kevoree.modeling.microframework.typescript/pom.xml
+++ b/org.kevoree.modeling.microframework.typescript/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.3.3-SNAPSHOT</version>
+        <version>4.4.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
