--- a/org.kevoree.modeling.microframework.typescript/pom.xml
+++ b/org.kevoree.modeling.microframework.typescript/pom.xml
@@ -18,6 +18,12 @@
             <groupId>org.kevoree.modeling</groupId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.nodejs</artifactId>
+            <version>1.28</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
