--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 
     <properties>
         <kmf.plugin.version>15</kmf.plugin.version>
-        <java2typescript.plugin.version>11</java2typescript.plugin.version>
+        <java2typescript.plugin.version>12</java2typescript.plugin.version>
     </properties>
 
     <modules>
@@ -90,7 +90,7 @@
         <module>databases/org.kevoree.modeling.microframework.databases.redis</module>
         <module>databases/org.kevoree.modeling.microframework.databases.mongodb</module>
         <module>databases/org.kevoree.modeling.microframework.databases.websocket</module>
-		<module>databases/org.kevoree.modeling.microframework.databases.chronicle</module>
+        <module>databases/org.kevoree.modeling.microframework.databases.chronicle</module>
         <!-- End DataStores -->
 
     </modules>
@@ -134,6 +134,13 @@
                 <configuration>
                     <maxmemory>128M</maxmemory>
                     <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+                    <tags>
+                        <tag>
+                            <name>native</name>
+                            <!-- The value X makes javadoc ignoring the tag -->
+                            <placement>X</placement>
+                        </tag>
+                    </tags>
                 </configuration>
             </plugin>
             <plugin>
