--- a/databases/org.kevoree.modeling.microframework.databases.mongodb/pom.xml
+++ b/databases/org.kevoree.modeling.microframework.databases.mongodb/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.8.2-SNAPSHOT</version>
+        <version>4.9.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
