--- a/databases/org.kevoree.modeling.microframework.databases.rocksdb/pom.xml
+++ b/databases/org.kevoree.modeling.microframework.databases.rocksdb/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.9.2-SNAPSHOT</version>
+        <version>4.10.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
