--- a/org.kevoree.modeling.ast/pom.xml
+++ b/org.kevoree.modeling.ast/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.9.2-SNAPSHOT</version>
+        <version>4.10.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
