--- a/databases/org.kevoree.modeling.microframework.databases.voldemort/pom.xml
+++ b/databases/org.kevoree.modeling.microframework.databases.voldemort/pom.xml
@@ -21,6 +21,21 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>org.voldemort</groupId>
             <artifactId>voldemort</artifactId>
             <version>1.6.0</version>
