--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
         <module>databases/org.kevoree.modeling.microframework.databases.websocket</module>
         <module>databases/org.kevoree.modeling.microframework.databases.chronicle</module>
         <module>databases/org.kevoree.modeling.microframework.databases.voldemort</module>
+        <module>databases/org.kevoree.modeling.microframework.databases.webrtc</module>
         <module>databases/org.kevoree.modeling.microframework.databases.dht.openChord</module>
         <module>databases/org.kevoree.modeling.microframework.databases.dht.freepastry</module>
         <module>databases/org.kevoree.modeling.microframework.databases.dht.hyperbolic</module>
