--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/resources/bower.json
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/resources/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.5.4"
+    "polymer": "Polymer/polymer#~0.5.4",
+    "firebase": "~2.2.0"
   }
 }
