cleanup according to new API of TREEs and KDefer API

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.root</artifactId>
@@ -87,12 +88,11 @@
         <!-- DataStores -->
         <module>drivers/org.kevoree.modeling.microframework.drivers.leveldb</module>
         <module>drivers/org.kevoree.modeling.microframework.drivers.rocksdb</module>
-
+        <module>drivers/org.kevoree.modeling.microframework.drivers.websocket</module>
 
         <!--
         <module>drivers/org.kevoree.modeling.microframework.databases.redis</module>
         <module>drivers/org.kevoree.modeling.microframework.databases.mongodb</module>
-        <module>drivers/org.kevoree.modeling.microframework.databases.websocket</module>
         <module>drivers/org.kevoree.modeling.microframework.databases.chronicle</module>
         <module>drivers/org.kevoree.modeling.microframework.databases.voldemort</module>
         <module>drivers/org.kevoree.modeling.microframework.databases.webrtc</module>
@@ -209,8 +209,12 @@
         <repository>
             <id>OSS-public</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -218,8 +222,12 @@
         <pluginRepository>
             <id>OSS-public</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>true</enabled></snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
