--- a/drivers/org.kevoree.modeling.microframework.drivers.websocket/pom.xml
+++ b/drivers/org.kevoree.modeling.microframework.drivers.websocket/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.databases.websocket</artifactId>
-    <name>Kevoree :: Modeling :: DataBases :: WebSocket</name>
+    <artifactId>org.kevoree.modeling.microframework.drivers.websocket</artifactId>
+    <name>Kevoree :: Modeling :: Drivers :: WebSocket</name>
 
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
