--- a/test/org.kevoree.modeling.test.datastore/pom.xml
+++ b/test/org.kevoree.modeling.test.datastore/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
-            <artifactId>org.kevoree.modeling.microframework.databases.websocket</artifactId>
+            <artifactId>org.kevoree.modeling.microframework.drivers.websocket</artifactId>
             <version>${kmf.version}</version>
         </dependency>
     </dependencies>
@@ -37,6 +37,30 @@
                         <configuration>
                             <metaModelFile>metamodel/Geometry.mm</metaModelFile>
                             <js>true</js>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>clear files</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <delete>
+                                    <fileset dir="${project.basedir}/src/main/resources">
+                                        <include name="*.js"/>
+                                        <include name="*.ts"/>
+                                    </fileset>
+                                </delete>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
