--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.root</artifactId>
     <packaging>pom</packaging>
-    <version>4.11.1-SNAPSHOT</version>
+    <version>4.12.0</version>
     <name>Kevoree :: Modeling :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework</url>
     <description>Kevoree Modeling Framework</description>
@@ -233,6 +232,7 @@
                                     <goal>jar</goal>
                                 </goals>
                                 <configuration>
+                                    <failOnError>false</failOnError>
                                     <additionalparam>-Xdoclint:none</additionalparam>
                                     <maxmemory>128M</maxmemory>
                                     <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
