--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.root</artifactId>
@@ -76,15 +77,15 @@
     </properties>
 
     <modules>
+        <!-- MicroFramework -->
         <module>org.kevoree.modeling.microframework</module>
         <module>org.kevoree.modeling.microframework.typescript</module>
-
+        <!-- CodeGenerator and associated tools -->
         <module>org.kevoree.modeling.ast</module>
         <module>org.kevoree.modeling.generator</module>
         <module>org.kevoree.modeling.generator.standalone</module>
         <module>org.kevoree.modeling.generator.mavenplugin</module>
-
-        <!-- DataStores -->
+        <!-- ContentDelivery drivers -->
         <module>drivers/org.kevoree.modeling.microframework.drivers.leveldb</module>
         <module>drivers/org.kevoree.modeling.microframework.drivers.rocksdb</module>
         <module>drivers/org.kevoree.modeling.microframework.drivers.websocket</module>
