--- a/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
+++ b/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.framework.ui.graph</artifactId>
-    <name>Kevoree :: Modeling :: Framework :: UI :: Graph</name>
+    <artifactId>org.kevoree.modeling.microframework.addons.swing</artifactId>
+    <name>Kevoree :: Modeling :: Addons :: Swing</name>
 
     <properties>
         <gs.core.version>1.2</gs.core.version>
@@ -12,26 +12,9 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.10.5-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>4.16.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
@@ -44,13 +27,6 @@
             <artifactId>gs-core</artifactId>
             <version>${gs.core.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.kevoree.modeling</groupId>
-            <artifactId>org.kevoree.modeling.sample.smartgrid.kt</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
     </dependencies>
 
 </project>
