--- a/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
+++ b/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.kevoree.modeling.microframework.addons.swing</artifactId>
     <name>Kevoree :: Modeling :: Addons :: Swing</name>
@@ -12,7 +11,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.16.1-SNAPSHOT</version>
+        <version>4.17.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
