--- a/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
+++ b/addons/org.kevoree.modeling.microframework.addons.swing/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.17.1-SNAPSHOT</version>
+        <version>4.17.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
