--- a/org.kevoree.modeling.generator.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.generator.mavenplugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.17.1</version>
+        <version>4.17.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
