--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 
     <properties>
         <kmf.plugin.version>15</kmf.plugin.version>
-        <java2typescript.plugin.version>22-SNAPSHOT</java2typescript.plugin.version>
+        <java2typescript.plugin.version>22</java2typescript.plugin.version>
     </properties>
 
     <modules>
