--- a/test/pom.xml
+++ b/test/pom.xml
@@ -20,7 +20,8 @@
     </licenses>
 
     <properties>
-        <kmf.version>4.13.1-SNAPSHOT</kmf.version>
+        <kmf.version>4.18.3</kmf.version>
+        <java2typescript.plugin.version>27</java2typescript.plugin.version>
     </properties>
 
     <developers>
