--- a/drivers/org.kevoree.modeling.microframework.drivers.redis/pom.xml
+++ b/drivers/org.kevoree.modeling.microframework.drivers.redis/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.databases.redis</artifactId>
-    <name>Kevoree :: Modeling :: DataBases :: Redis</name>
+    <artifactId>org.kevoree.modeling.microframework.drivers.redis</artifactId>
+    <name>Kevoree :: Modeling :: Drivers :: Redis</name>
 
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.11.1-SNAPSHOT</version>
+        <version>4.18.4-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -20,16 +20,14 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.6.0</version>
+            <version>2.7.2</version>
         </dependency>
-
         <dependency>
             <groupId>redis.embedded</groupId>
             <artifactId>embedded-redis</artifactId>
             <version>0.3</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 
