--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <module>drivers/org.kevoree.modeling.microframework.drivers.leveldb</module>
         <module>drivers/org.kevoree.modeling.microframework.drivers.rocksdb</module>
         <module>drivers/org.kevoree.modeling.microframework.drivers.websocket</module>
+        <module>drivers/org.kevoree.modeling.microframework.drivers.redis</module>
         <!--Addons -->
         <module>addons/org.kevoree.modeling.microframework.addons.nunjucks</module>
         <module>addons/org.kevoree.modeling.microframework.addons.swing</module>
