--- a/org.kevoree.modeling.microframework/pom.xml
+++ b/org.kevoree.modeling.microframework/pom.xml
@@ -11,4 +11,12 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <dependencies>
+    <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-map</artifactId>
+        <version>3.0.2-alpha</version>
+    </dependency>
+    </dependencies>
+
 </project>
