--- a/drivers/org.kevoree.modeling.microframework.drivers.chronicle/pom.xml
+++ b/drivers/org.kevoree.modeling.microframework.drivers.chronicle/pom.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.databases.mongodb</artifactId>
-    <name>Kevoree :: Modeling :: DataBases :: MongoDB</name>
+    <artifactId>org.kevoree.modeling.microframework.databases.chronicle</artifactId>
+    <name>Kevoree :: Modeling :: DataBases :: Chronicle</name>
+
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.11.1-SNAPSHOT</version>
+        <version>4.18.4-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <properties>
-        <mongo.driver.version>2.12.3</mongo.driver.version>
-    </properties>
-
 
     <dependencies>
         <dependency>
@@ -21,11 +17,11 @@
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${mongo.driver.version}</version>
-        </dependency>
+		<dependency>                                   
+		  <groupId>net.openhft</groupId>
+		  <artifactId>chronicle-map</artifactId>
+		  <version>2.0.14b</version>
+		</dependency>
     </dependencies>
 
 </project>
