--- a/drivers/org.kevoree.modeling.microframework.drivers.mapdb/pom.xml
+++ b/drivers/org.kevoree.modeling.microframework.drivers.mapdb/pom.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.databases.freepastry</artifactId>
-    <name>Kevoree :: Modeling :: DataBases :: Freepastry</name>
+    <artifactId>org.kevoree.modeling.microframework.drivers.mapdb</artifactId>
+    <name>Kevoree :: Modeling :: Drivers :: MapDB</name>
+
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>4.11.1-SNAPSHOT</version>
+        <version>4.18.4-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <properties>
-    </properties>
-
 
     <dependencies>
         <dependency>
@@ -20,7 +17,11 @@
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>1.0.7</version>
+        </dependency>
     </dependencies>
 
 </project>
